add dashboard pendapatan bulanana

--- a/src/scss/_scrollbar.scss
+++ b/src/scss/_scrollbar.scss
@@ -7,10 +7,10 @@
   }
 }
 
-//::-webkit-scrollbar {
-//  width: .7em;
-//  height: .7em;
-//}
+::-webkit-scrollbar {
+ width: .7em;
+ height: .7em;
+}
 
 ::-webkit-scrollbar-track {
   background: var(--cui-body-bg, #fff);
