--- a/src/app/layout/default-layout/default-layout.component.html
+++ b/src/app/layout/default-layout/default-layout.component.html
@@ -8,8 +8,8 @@
 >
   <c-sidebar-header class="border-bottom">
     <c-sidebar-brand [routerLink]="[]">
-      <svg [class]="{icon: false}" cIcon class="sidebar-brand-full" height="32" name="logo" title="CoreUI Logo"></svg>
-      <svg cIcon class="sidebar-brand-narrow" height="32" name="signet" title="CoreUI Logo"></svg>
+      <svg [class]="{icon: false}" cIcon class="sidebar-brand-full" height="32" name="logo" title="Pio Logo"></svg>
+      <svg cIcon class="sidebar-brand-narrow" height="32" name="signet" title="Pio Logo"></svg>
     </c-sidebar-brand>
   </c-sidebar-header>
 
