hapus atribute charst

--- a/src/app/views/dashboard/dashboard.component.html
+++ b/src/app/views/dashboard/dashboard.component.html
@@ -14,10 +14,10 @@
               [data]="mainChart.data"
               [height]="300"
               [ngStyle]="{ 'marginTop.px': 40 }"
+              [options]="mainChart.options"
               [type]="mainChart.type"
               (chartRef)="handleChartRef($event)"
               >
-              Main chart day
               </c-chart>
           </c-card-body>
         </c-card>
@@ -34,8 +34,8 @@
                     [height]="300"
                     [options]="pieChart.options"
                     [type]="pieChart.type"
-                    [plugins]="pieChartPlugins"
-                  >pieChart
+                
+                  >
                   </c-chart>
                 </c-card-body>
               </c-card>
@@ -50,10 +50,10 @@
                         <c-chart
                           [data]="yearlyChart.data"
                           [height]="300"
+                          [options]="yearlyChart.options"
                           [type]="yearlyChart.type"
                           (chartRef)="handleChartRef($event)"
                           >
-                          Main chart year
                           </c-chart>
                     </c-card-body>
                 </c-card>
