--- a/src/app/views/dashboard/dashboard.component.html
+++ b/src/app/views/dashboard/dashboard.component.html
@@ -34,7 +34,7 @@
                     [height]="300"
                     [options]="pieChart.options"
                     [type]="pieChart.type"
-                
+                    [plugins]="pieChartPlugins"
                   >
                   </c-chart>
                 </c-card-body>
