--- a/src/app/views/dashboard/dashboard.component.html
+++ b/src/app/views/dashboard/dashboard.component.html
@@ -1,6 +1,9 @@
 <c-card>
     <c-card-body>
-      <app-widgets-dropdown/>
+      
+
+      
+      <app-widgets/>
         <c-card class="my-4">
           <c-card-header>
             <c-row>
