--- a/src/scss/_custom.scss
+++ b/src/scss/_custom.scss
@@ -15,3 +15,8 @@
 .select-week .calendar-row.current {
   cursor: pointer;
 }
+
+.sidebar-nav .nav-item {
+  margin-top: 4px;
+  margin-bottom: 20px;
+}
