--- a/src/scss/styles.scss
+++ b/src/scss/styles.scss
@@ -1,23 +1,24 @@
-/* You can add global styles to this file, and also import other style files */
-
-// Import styles with default layout.
+/* CoreUI Styles */
 @use "@coreui/coreui/scss/coreui" as * with (
   $enable-deprecation-messages: false
 );
 
-// Import Chart.js custom tooltips styles
+
+/* ChartJS styles */
 @use "@coreui/chartjs/scss/coreui-chartjs";
 
-// Custom styles for this theme
+/* Custom theme and overrides */
 @use "theme";
-
-// Some temp fixes
-//@use "fixes";
-
-// If you want to add custom CSS you can put it here.
 @use "custom";
-
-// Examples
-// We use those styles to show code examples, you should remove them in your application.
 @use "examples";
 
+/* FontAwesome */
+@import "@fortawesome/fontawesome-free/css/all.min.css";
+
+
+/* Global layout */
+html, body {
+  height: 100%;
+  margin: 0;
+  font-family: Roboto, "Helvetica Neue", sans-serif;
+}
