--- a/src/app/views/dashboard/dashboard.component.html
+++ b/src/app/views/dashboard/dashboard.component.html
@@ -6,7 +6,7 @@
           <i class="fa-solid fa-bag-shopping fa-2x me-3" style="color: #007bff;"></i>
           <div class="d-flex align-items-center flex-wrap">
             <h5 class="mb-0 me-3 fw-semibold text-dark">
-              Detail Bisnis Anda <span class="fw-bold">Coffee Mawang</span>, Pangkalpinang
+              Detail Bisnis <span class="fw-bold">Coffee Mawang</span>, Pangkalpinang
             </h5>
             <span
               class="badge text-dark"
