--- a/src/app/views/widgets/widgets/widgets.component.html
+++ b/src/app/views/widgets/widgets/widgets.component.html
@@ -35,6 +35,6 @@
 <!-- Pengeluaran -->
 <c-row class="g-4" *ngIf="activeRouteName() === 'pengeluaran'">
   <c-col xl="12" md="6" sm="6">
-    <c-widget-stat-b [title]="'Rp.'" text="200.000.000" value="Total Pengeluaran"></c-widget-stat-b>
+    <c-widget-stat-b [title]="'Rp.'" text="200.000.000" value="Total Pengeluaran" class="text-red-widget"></c-widget-stat-b>
   </c-col>
 </c-row>
