--- a/src/app/vouchers-components/vouchers-components.component.scss
+++ b/src/app/vouchers-components/vouchers-components.component.scss
@@ -7,3 +7,9 @@
 .align-middle{
   border: 1px solid #dee2e6;
 }
+.color-blue {
+  color: #007bff;
+} 
+label.fw-bold {
+  font-weight: 600; /* ensures label is bold */
+}
