--- a/src/app/products-components/products-components.component.html
+++ b/src/app/products-components/products-components.component.html
@@ -5,8 +5,11 @@
       <button class="btn btn-dark d-flex align-items-center">
          <svg [cIcon]="icons.cilPrint" width="16" height="16"></svg>&nbsp;&nbsp;&nbsp;Cetak
       </button>
-      <button class="btn btn-primary d-flex align-items-center">
-         <svg [cIcon]="icons.cilPlus" width="16" height="16"></svg>&nbsp;&nbsp;&nbsp;Tambah Produk
+      <button
+        class="btn d-flex align-items-center"
+        style="background-color: #007bff; color: #fff; border: none;"
+      >
+        <svg [cIcon]="icons.cilPlus" width="16" height="16"></svg>&nbsp;&nbsp;&nbsp;Tambah Produk
       </button>
     </div>
 
@@ -68,7 +71,7 @@
             </td>
             <td>
               <button class="icon-button me-2">
-                <svg [cIcon]="icons.cilPencil" width="16" height="16" class="text-primary"></svg>
+                <svg [cIcon]="icons.cilPencil" width="16" height="16" class="color-blue"></svg>
               </button>
               <button class="icon-button">
                 <svg [cIcon]="icons.cilTrash" width="16" height="16" class="text-danger"></svg>
