repair display pegawai level 1

--- a/src/app/vouchers-components/vouchers-components.component.html
+++ b/src/app/vouchers-components/vouchers-components.component.html
@@ -25,7 +25,7 @@
               class="btn d-flex align-items-center"
               style="background-color: #007bff; color: #fff; border: none;"
             >
-              <svg [cIcon]="icons.cilPlus" width="16" height="16"></svg>&nbsp;&nbsp;&nbsp;Tambah Pengeluaran
+              <svg [cIcon]="icons.cilPlus" width="16" height="16"></svg>&nbsp;&nbsp;&nbsp;Tambah Voucher
             </button>
         </div>
       </div>
