--- a/src/app/products-components/products-components.component.html
+++ b/src/app/products-components/products-components.component.html
@@ -6,11 +6,18 @@
          <svg [cIcon]="icons.cilPrint" width="16" height="16"></svg>&nbsp;&nbsp;&nbsp;Cetak
       </button>
       <button
+      type="button"
         class="btn d-flex align-items-center"
+        (click)="openCreateProductModal()"
         style="background-color: #007bff; color: #fff; border: none;"
       >
         <svg [cIcon]="icons.cilPlus" width="16" height="16"></svg>&nbsp;&nbsp;&nbsp;Tambah Produk
       </button>
+          <!-- panggil component yang kamu buat -->
+          <app-create-product-components
+          [visible]="visibleCreateProduct"
+          (visibleChange)="visibleCreateProduct = $event">
+          </app-create-product-components>
     </div>
 
     <!-- Form filter dan pencarian -->
