--- a/src/app/pengeluaran-components/pengeluaran-components.component.html
+++ b/src/app/pengeluaran-components/pengeluaran-components.component.html
@@ -43,12 +43,20 @@
           <button class="btn btn-dark d-flex align-items-center">
             <svg [cIcon]="icons.cilPrint" width="16" height="16"></svg>&nbsp;&nbsp;&nbsp;Cetak
           </button>
+
            <button
+              type="button"
+              (click)="openCreatePengeluaranModal()"
               class="btn d-flex align-items-center"
               style="background-color: #007bff; color: #fff; border: none;"
             >
               <svg [cIcon]="icons.cilPlus" width="16" height="16"></svg>&nbsp;&nbsp;&nbsp;Tambah Pengeluaran
             </button>
+                <!-- panggil component yang kamu buat -->
+                <app-create-pengeluaran-components
+                [visible]="visibleCreatePengeluaran"
+                (visibleChange)="visibleCreatePengeluaran = $event">
+                </app-create-pengeluaran-components>
         </div>
       </div>
     <!-- Form filter dan pencarian -->
