--- a/src/app/vouchers-components/vouchers-components.component.html
+++ b/src/app/vouchers-components/vouchers-components.component.html
@@ -22,11 +22,18 @@
             <svg [cIcon]="icons.cilPrint" width="16" height="16"></svg>&nbsp;&nbsp;&nbsp;Cetak
           </button>
            <button
+              type="button"
+              (click)="onCreateVoucher()"
               class="btn d-flex align-items-center"
               style="background-color: #007bff; color: #fff; border: none;"
             >
               <svg [cIcon]="icons.cilPlus" width="16" height="16"></svg>&nbsp;&nbsp;&nbsp;Tambah Voucher
             </button>
+            <!-- panggil component yang kamu buat -->
+            <app-create-voucher
+              [visible]="visibleCreateVoucher"
+              (visibleChange)="visibleCreateVoucher = $event">
+            </app-create-voucher>
         </div>
       </div>
 
