--- a/src/app/products-components/products-components.component.html
+++ b/src/app/products-components/products-components.component.html
@@ -12,12 +12,7 @@
         style="background-color: #007bff; color: #fff; border: none;"
       >
         <svg [cIcon]="icons.cilPlus" width="16" height="16"></svg>&nbsp;&nbsp;&nbsp;Tambah Produk
-      </button>
-          <!-- panggil component yang kamu buat -->
-          <app-create-product-components
-          [visible]="visibleCreateProduct"
-          (visibleChange)="visibleCreateProduct = $event">
-          </app-create-product-components>
+      </button>      
     </div>
 
     <!-- Form filter dan pencarian -->
@@ -77,10 +72,11 @@
               </c-badge>
             </td>
             <td>
-              <button class="icon-button me-2">
+              <button class="icon-button me-2" (click)="openEditProductModal(product)">
                 <svg [cIcon]="icons.cilPencil" width="16" height="16" class="color-blue"></svg>
               </button>
-              <button class="icon-button">
+   
+              <button class="icon-button" (click)="openDeleteProductModal(product)">
                 <svg [cIcon]="icons.cilTrash" width="16" height="16" class="text-danger"></svg>
               </button>
             </td>
@@ -88,6 +84,15 @@
         </tbody>
       </table>
     </div>
+
+     <app-create-product-components
+          [visible]="visibleCreateProduct"
+          [mode]="selectedProduct ? 'edit' : 'create'"
+          [product]="selectedProduct"
+          (visibleChange)="visibleCreateProduct = $event">
+      </app-create-product-components>
+
+      
 
     <div class="d-flex justify-content-between align-items-center mb-3">
       <p class="text-muted small mb-0">
