--- a/src/app/products-components/products-components.component.html
+++ b/src/app/products-components/products-components.component.html
@@ -29,7 +29,7 @@
           <input
             type="text"
             class="form-control form-control ps-5"
-            placeholder="Cari Nama atau Kode Produk..."
+            placeholder="Cari..."
           
           />
           <svg [cIcon]="icons.cilSearch" width="16" height="16" class="position-absolute top-50 start-0 translate-middle-y ms-3 text-secondary"></svg>  
